src/objects/SMG_Country_State_Reference__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>SMG_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMG_Geo__c</fullName>
        <label>Geo</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMG_State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMG_Sub_Geo__c</fullName>
        <label>Sub Geo</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Country State Reference</label>
</CustomObject>